syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.acme";
option java_outer_classname = "HelloGrpcProto";

package hello;

service HelloGrpc {

    rpc SayHello (HelloRequest) returns (HelloReply) {}

    rpc StreamRandomNumbers (NumberRequest) returns (stream NumberResponse) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

message NumberRequest {
    int64 count = 1;
}

message NumberResponse {
    int64 index = 1;
    int64 value = 2;
}
